fix: types select z-index

--- a/styles/coursescript-preview.less
+++ b/styles/coursescript-preview.less
@@ -53,6 +53,7 @@
   text-align: center;
   font-size: 20px;
   border-right: 1px solid #9da5b4;
+  z-index: 1;
   > p {
     margin: 0;
     line-height: 40px;
